# cryprobotik

./: .dockerignore  .env.example  .gitignore  .mcp.example.json  .mcp.json  AGENTS.md  ANALYSIS_PROFITABLE_TRADING.md  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  package-lock.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  start_bot.sh
config/: config.yaml
docker/: Dockerfile  alerts.yml  entrypoint.sh  prometheus.yml
scripts/: reset_halt.py  run_backtest.py
src/: __init__.py  main.py  orchestrator.py  settings.py
src/backtest/: __init__.py  engine.py
src/data/: __init__.py  feature_store.py  schema.sql  storage.py
src/exchanges/: __init__.py  base.py  bybit.py  okx.py  paper.py  ws_manager.py
src/execution/: __init__.py  executor.py  exit_manager.py  order_router.py  rate_limiter.py
src/ml/: features.py  model.py
src/monitoring/: __init__.py  health.py  prom_metrics.py
src/notifications/: __init__.py  telegram.py
src/portfolio/: __init__.py  analytics.py  tracker.py
src/risk/: kill_switch.py  limits.py  manager.py
src/strategies/: __init__.py  base.py  ensemble.py  funding_arb.py  funding_contrarian.py  liquidation_cascade.py  mean_reversion.py  momentum.py  regime.py  volatility_breakout.py  (+1 more)
tests/: conftest.py  test_broadcaster.py  test_ensemble.py  test_executor.py  test_exit_manager.py  test_feature_store.py  test_health_endpoints.py  test_indicators.py  test_kill_switch.py  test_orchestrator_halt.py  test_order_router.py  test_rate_limiter.py  test_regime_hurst.py  test_risk_manager.py  test_strategies_basic.py
(+6 files in other folders)
