[project]
name = "cryprobotik"
version = "0.1.0"
description = "Autonomous multi-exchange crypto perpetual-futures trading bot (OKX + Bybit)"
requires-python = ">=3.12,<3.14"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "RUF"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI / typer use function-call defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true    # pandas_ta, ccxt type stubs are incomplete
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "integration: tests that hit real exchange testnet endpoints",
    "slow: tests that take >5s",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/main.py",          # entry-point, needs full env to import
    "src/data/storage.py",  # asyncpg — integration-only
]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
